--- a/Learn/lecture -3/style.css
+++ b/Learn/lecture -3/style.css
@@ -1,4 +1,33 @@
-*{
-  padding: 0;
-  margin: 0;
+body {
+  font-family: sans-serif;
+}
+
+nav {
+  margin-bottom: 16px;
+  background: #fa923f;
+  padding: 8px 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  margin: 10px;
+}
+
+a.active{
+  color:purple;
+}
+
+a{
+  color:blue;
+}
+
+.main-section {
+  height: 800px;
+  border: 1px solid #ccc !important;
+  padding: 16px;
+}
+
+.highlighted{
+  border:2px solid orange;
 }
