--- a/Learn/lecture -5/style.css
+++ b/Learn/lecture -5/style.css
@@ -16,6 +16,7 @@ body {
 
 .section-title {
   color: #2ddf5c;
+  text-align: center;
 }
 
 #product-overview h1 {
@@ -23,7 +24,7 @@ body {
   font-family: "Titillium Web", sans-serif;
 }
 
-.plan{
+.plan {
   background: #d5ffdc;
   text-align: center;
   padding: 16px;
@@ -31,6 +32,113 @@ body {
   display: inline-block;
   width: 30%;
   vertical-align: middle;
+}
+
+.plan--highlighted {
+  background: #19b84c;
+  color: white;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.plan__annotation {
+  background: white;
+  color: #19b84c;
+  padding: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
+.plan__features {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan--highlighted .plan__title {
+  color: white;
+}
+
+.plan__price {
+  color: rgb(135, 134, 134);
+}
+
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
+.plan__features {
+  margin: 8px 0;
+}
+
+/* Styling button */
+
+.button {
+  background: #0e4f1f;
+  color: white;
+  font: inherit;
+  border: 2px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  background: white;
+  color: #0e4f1f;
+}
+
+.button:focus {
+  outline: none;
+}
+
+/* features in red color */
+/* Styling the heading of the features */
+#key-features {
+  background: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features > .section-title {
+  color: white;
+  margin: 32px;
+}
+
+.key-feature__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.key-feature {
+  display: inline-block;
+  width: 33%;
+  vertical-align: top;
+}
+
+/* For the Image */
+.key-feature__image {
+  background: #ffcede;
+  width: 120px;
+  height: 120px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  /* for centering the circles horizontal */
+  margin: 0 auto;
+}
+
+.key-feature__des {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
 }
 
 .main-header {
@@ -94,5 +202,34 @@ body {
 .main-nav__item--cta a:active {
   color: #ff1b68;
   background: white;
-  border:none;
+  border: none;
+}
+
+/* Styling the footer */
+.main-footer {
+  background: black;
+  padding: 42px;
+  margin-top: 48px;
+}
+
+.main-footer__links {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  list-style: none;
+}
+
+.main-footer__link {
+  display: inline-block;
+  margin: 0 16px;
+}
+.main-footer__link a {
+  color: white;
+  text-decoration: none;
+}
+
+.main-footer__link a:hover,
+.main-footer__link a:active {
+  color: #ccc;
+  
 }
