--- a/Learn/lecture -5/style.css
+++ b/Learn/lecture -5/style.css
@@ -1,12 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: serif;
-  margin: 0;
-}
-
 #product-overview {
   background: url("freedom.jpg");
   width: 100%;
@@ -141,6 +132,7 @@ body {
   font-size: 20px;
 }
 
+/* For header  */
 .main-header {
   background-color: #2ddf5c;
   padding: 8px 16px;
@@ -231,5 +223,4 @@ body {
 .main-footer__link a:hover,
 .main-footer__link a:active {
   color: #ccc;
-  
 }
